--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -25,3 +25,18 @@
 .header{
   text-align: center;
 }
+
+.post-enter {
+  opacity: 0;
+}
+.post-enter-active {
+  opacity: 1;
+  transition: opacity 500ms ease-in;
+}
+.post-exit {
+  opacity: 1;
+}
+.post-exit-active {
+  opacity: 0;
+  transition: opacity 500ms ease-in;
+}
